force-app/main/default/objects/FPS_Bor_Workday__c/FPS_Bor_Workday__c.object-meta.xml
<CustomObject>
    <description>Borealis/FPS POC custom object</description>
    <label>Workday</label>
    <nameField>
        <displayFormat>WD - {00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workdays</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>