force-app/main/default/objects/FPS_Bor_Workday__c/fields/Is_current_month__c.field-meta.xml
<CustomField>
    <fullName>Is_current_month__c</fullName>
    <formula>AND(TEXT(Month__c) = TEXT(MONTH(TODAY())), YEAR(Today()) = Year__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is current month?</label>
    <type>Checkbox</type>
</CustomField>