force-app/main/default/objects/FPS_Bor_Workday__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <label>Month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>03</fullName>
                <isActive>false</isActive>
                <label>03</label>
            </value>
            <value>
                <fullName>04</fullName>
                <isActive>false</isActive>
                <label>04</label>
            </value>
            <value>
                <fullName>05</fullName>
                <isActive>false</isActive>
                <label>05</label>
            </value>
            <value>
                <fullName>06</fullName>
                <isActive>false</isActive>
                <label>06</label>
            </value>
            <value>
                <fullName>07</fullName>
                <isActive>false</isActive>
                <label>07</label>
            </value>
            <value>
                <fullName>08</fullName>
                <isActive>false</isActive>
                <label>08</label>
            </value>
            <value>
                <fullName>09</fullName>
                <isActive>false</isActive>
                <label>09</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>