force-app/main/default/objects/FPS_Bor_Workday__c/fields/Number_of_working_days_current_month__c.field-meta.xml
<CustomField>
    <fullName>Number_of_working_days_current_month__c</fullName>
    <label>Number of working days current month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>