force-app/main/default/objects/FPS_Bor_Workday__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Unique_Name__c</columns>
    <columns>Country__c</columns>
    <columns>Is_current_month__c</columns>
    <columns>Month__c</columns>
    <columns>Year__c</columns>
    <columns>Number_of_working_days_current_month__c</columns>
    <columns>Number_of_working_days_till_today__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>